--- a/index.html
+++ b/index.html
@@ -1,27 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GraphQL Form</title>
-  <script src="https://unpkg.com/@apollo/client@3.7.0/dist/browser/bundle.min.js"></script>
-  <script src="https://unpkg.com/graphql@16.6.0/index.min.js"></script>
-  <script src="app.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GraphQL Form</title>
+    <script src="https://unpkg.com/@apollo/client@3.7.0/dist/browser/bundle.min.js"></script>
+    <script src="https://unpkg.com/graphql@16.6.0/index.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const form = document.getElementById('graphql-form');
+            const responseDiv = document.getElementById('response');
+            const imageContainer = document.getElementById('image-container');
+
+            form.addEventListener('submit', async function(event) {
+                event.preventDefault();
+
+                const modelType = document.getElementById('model-type').value;
+                const title = document.getElementById('title').value;
+                const description = document.getElementById('description').value;
+
+                const requestData = {
+                    model_type: modelType,
+                    prompt: `${title} ${description}`
+                };
+
+                try {
+                    const response = await fetch('/generateDesign', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify(requestData),
+                    });
+
+                    const result = await response.json();
+
+                    if (response.ok) {
+                        const img = new Image();
+                        img.src = `data:image/png;base64,${result.image}`;
+                        imageContainer.innerHTML = ''; // Clear previous image
+                        imageContainer.appendChild(img);
+                    } else {
+                        responseDiv.innerText = result.error || 'Error generating image';
+                    }
+                } catch (error) {
+                    console.error('Error:', error);
+                    responseDiv.innerText = 'An error occurred while generating the image.';
+                }
+            });
+        });
+    </script>
 </head>
 <body>
-  <h1>GraphQL Form</h1>
-  <form id="graphql-form">
-    <label for="model-type">Model Type:</label>
-    <input type="text" id="model-type" name="model-type" required>
-    <br>
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="title" required>
-    <br>
-    <label for="description">Description:</label>
-    <textarea id="description" name="description" required></textarea>
-    <br>
-    <button type="submit">Submit</button>
-  </form>
-  <div id="response"></div>
+    <h1>GraphQL Form</h1>
+    <form id="graphql-form">
+        <label for="model-type">Model Type:</label>
+        <input type="text" id="model-type" name="model-type" required>
+        <br>
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required>
+        <br>
+        <label for="description">Description:</label>
+        <textarea id="description" name="description" required></textarea>
+        <br>
+        <button type="submit">Submit</button>
+    </form>
+    <div id="response"></div>
+    <div id="image-container"></div>
 </body>
 </html>
